TASK: first iteration to type safe (generated)  openAPI (Dimensions API)
